Смена режимов работы, FTP сервер, Точка доступа. - При удержании кнопок UP+DOWN: происходит цикл. смена режимов:   Режим смены адреса платы | Режим прошивки плат | Режим точки доступа. - Добавлен режим точки доступа: Активируется точка доступа (ssid: Loader, pass: 11111111).   В данном режиме доступно подключение по FTP (IP: 192.168.4.1, user: Loader, pass: 11111111) для передачи файлов прошивок для плат расширения.

--- a/platformio.ini
+++ b/platformio.ini
@@ -18,3 +18,4 @@ lib_deps =
 	gyverlibs/GyverShift@^1.1.0
 	gyverlibs/EncButton@^3.5.4
 	4-20ma/ModbusMaster@^2.0.1
+	nailbuster/ESP8266FtpServer@^1.0.1
